@@ -1,5 +1,6 @@
 2012-05-01  Stanislas Rolland  <typo3@sjbr.ca>
 	* Always use utf-8 by default
+	* Fix for tslib_pibase TYPO3 4.6+ and PHP 5.3+
 
 2012-04-23  Stanislas Rolland  <typo3@sjbr.ca>
 	* Add extension autoload
